{
  "version": 4,
  "terraform_version": "1.0.3",
  "serial": 88,
  "lineage": "a138f387-feec-44c7-0f39-5fa4af9aab3d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "AnsibleController",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c2b8ca1dad447f8a",
            "arn": "arn:aws:ec2:us-east-1:098491757517:instance/i-011edffbed5deadfe",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-011edffbed5deadfe",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "devops-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-095ae3a928b833aa6",
            "private_dns": "ip-172-20-10-115.ec2.internal",
            "private_ip": "172.20.10.115",
            "public_ip": "54.236.220.57",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04ae50f52722fa39d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0480c2ebb1c6bcb68",
            "tags": {
              "Name": "Ansible-EC2"
            },
            "tags_all": {
              "Name": "Ansible-EC2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-014b10c481227324a"
            ]
          },
          "dependencies": [
            "aws_security_group.Pyramid_Sec_Group",
            "aws_subnet.Pyramid-Subnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Jenkins-Ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c2b8ca1dad447f8a",
            "arn": "arn:aws:ec2:us-east-1:098491757517:instance/i-0b314469ad726698b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b314469ad726698b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "devops-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05f83115383bbd9cf",
            "private_dns": "ip-172-20-10-175.ec2.internal",
            "private_ip": "172.20.10.175",
            "public_ip": "3.89.97.39",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-027867ee1f1ad3081",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0480c2ebb1c6bcb68",
            "tags": {
              "Name": "Jenkins-EC2"
            },
            "tags_all": {
              "Name": "Jenkins-EC2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-014b10c481227324a"
            ]
          },
          "dependencies": [
            "aws_security_group.Pyramid_Sec_Group",
            "aws_subnet.Pyramid-Subnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Pyramid-IntGateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:098491757517:internet-gateway/igw-04ae5ba678ab63e34",
            "id": "igw-04ae5ba678ab63e34",
            "owner_id": "098491757517",
            "tags": {
              "Name": "Pyramid-IntGateWay"
            },
            "tags_all": {
              "Name": "Pyramid-IntGateWay"
            },
            "vpc_id": "vpc-002c93b9a374a2b07"
          },
          "dependencies": [
            "aws_vpc.Pyramid-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Pyramid_Routeable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:098491757517:route-table/rtb-02c6a0697a48b6f65",
            "id": "rtb-02c6a0697a48b6f65",
            "owner_id": "098491757517",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04ae5ba678ab63e34",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Pyramid_RouteTable"
            },
            "tags_all": {
              "Name": "Pyramid_RouteTable"
            },
            "vpc_id": "vpc-002c93b9a374a2b07"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.Pyramid-IntGateway",
            "aws_vpc.Pyramid-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Pyramid_Assn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-041e730554f1faa8a",
            "route_table_id": "rtb-02c6a0697a48b6f65",
            "subnet_id": "subnet-0480c2ebb1c6bcb68"
          },
          "dependencies": [
            "aws_internet_gateway.Pyramid-IntGateway",
            "aws_route_table.Pyramid_Routeable",
            "aws_subnet.Pyramid-Subnet1",
            "aws_vpc.Pyramid-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Pyramid_Sec_Group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:098491757517:security-group/sg-014b10c481227324a",
            "description": "Inbound and outboud traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-014b10c481227324a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8081
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Pyramid Scuerity Group",
            "name_prefix": "",
            "owner_id": "098491757517",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow traffic"
            },
            "tags_all": {
              "Name": "allow traffic"
            },
            "timeouts": null,
            "vpc_id": "vpc-002c93b9a374a2b07"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Pyramid-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Pyramid-Subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:098491757517:subnet/subnet-0480c2ebb1c6bcb68",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.20.10.0/24",
            "id": "subnet-0480c2ebb1c6bcb68",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "098491757517",
            "tags": {
              "Name": "Pyramid-Subnet1"
            },
            "tags_all": {
              "Name": "Pyramid-Subnet1"
            },
            "vpc_id": "vpc-002c93b9a374a2b07"
          },
          "dependencies": [
            "aws_vpc.Pyramid-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Pyramid-VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:098491757517:vpc/vpc-002c93b9a374a2b07",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.20.0.0/16",
            "default_network_acl_id": "acl-093ad5abdc0ebe1e5",
            "default_route_table_id": "rtb-0a15718612b15d01a",
            "default_security_group_id": "sg-0116d0b58cae20a49",
            "dhcp_options_id": "dopt-7ef1d804",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-002c93b9a374a2b07",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0a15718612b15d01a",
            "owner_id": "098491757517",
            "tags": {
              "Name": "Pyramid-VPC"
            },
            "tags_all": {
              "Name": "Pyramid-VPC"
            }
          }
        }
      ]
    }
  ]
}